[package]
name = "redis-test"
version = "0.1.0"
authors = ["Anders Bennehag <anders@bennehag.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
redis = { git = "https://github.com/mitsuhiko/redis-rs.git", rev = "1ea0bd0c2e7b450eb5279995142fd64e5db0fa69" }
